[gd_scene load_steps=8 format=3 uid="uid://xbb2psgt2l54"]

[ext_resource type="Theme" uid="uid://b8g7cptiggoa" path="res://theme.tres" id="1_ljkab"]
[ext_resource type="Texture2D" uid="uid://cvruh3s2sbklr" path="res://Sprites/UI/Windows95/Windows_Toggle_Active.png" id="2_puew4"]
[ext_resource type="Script" path="res://Scripts/UI/Inventory/inventory_slot.gd" id="3_gddge"]
[ext_resource type="FontFile" uid="uid://bunmugpxj5gxe" path="res://font.ttf" id="4_k3821"]
[ext_resource type="PackedScene" uid="uid://dd7yt4j8a5qfv" path="res://Scenes/UI/health_bar.tscn" id="5_eb0gs"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y5da3"]
texture = ExtResource("2_puew4")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0

[sub_resource type="LabelSettings" id="LabelSettings_hvq65"]
font = ExtResource("4_k3821")
font_color = Color(0, 0, 0, 1)

[node name="InventorySlot" type="Panel"]
custom_minimum_size = Vector2(40, 40)
offset_right = 30.0
offset_bottom = 30.0
theme = ExtResource("1_ljkab")
theme_override_styles/panel = SubResource("StyleBoxTexture_y5da3")
script = ExtResource("3_gddge")

[node name="Item" type="Control" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="Item"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CountText" type="Label" parent="Item"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -14.0
offset_right = -1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
label_settings = SubResource("LabelSettings_hvq65")
horizontal_alignment = 2

[node name="HealthBar" parent="Item" instance=ExtResource("5_eb0gs")]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -17.0
offset_top = -8.0
offset_right = 18.0
offset_bottom = -2.0
grow_vertical = 0
